--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 </head>
 <body>
   <section id="abstract">
-    <p>The Data Privacy Vocabulary (DPV) provides terms (classes and properties) to annotate and categorize instances of legally compliant personal data handling according to the EU General Data Protection Regulation. This scope could be extended by later versions to other data and privacy protection regulations. The vocabulary provides terms to describe which personal data Categories are undergoing a specified kind of processing by a specific data controller and/or transferred to some recipient for a particular purpose, based on a specific legal ground (e.g., consent, or other legal grounds such as legitimate interest, etc.), with specified technical and organisational measures and restrictions (e.g., storage locations and storage durations) in place.</p>
+    <p>The Data Privacy Vocabulary (DPV) provides terms (classes and properties) to annotate and categorize instances of legally compliant personal data handling according to the EU General Data Protection Regulation. This scope could be extended by later versions to other data and privacy protection regulations. The vocabulary provides terms to describe the specifics of: personal data undergoing processing by data controller(s) and/or transferred to some recipient for particular purpose(s), based on a specific legal bases (e.g., consent, or other legal grounds such as legitimate interest, etc.), with technical and organisational measures and restrictions (e.g., storage locations and storage durations) in place.</p>
     <p style="text-align: center;">The namespace for DPV terms is <code>http://www.w3.org/ns/dpv#</code></p>
     <p style="text-align: center;">The suggested prefix for the DPV namespace is <code>dpv</code></p>
     <p style="text-align: center;">The DPV ontology is available <a href="dpv.ttl">here</a>.</p>
@@ -188,7 +188,7 @@
       <li>Purposes</li>
       <li>Processing Categories</li>
       <li>Technical and Organisational Measures</li>
-      <li>Legal Basis</li>
+      <li>Legal Bases</li>
       <li>Consent</li>
       <li>Recipients, Data Controllers, Data Subjects</li>
     </ul>
